added clear button

--- a/FluentTransformer/Components/Pages/Transformer.razor
+++ b/FluentTransformer/Components/Pages/Transformer.razor
@@ -60,7 +60,7 @@
         </FluentGrid>
         <FluentGrid Spacing="3" Justify="JustifyContent.Center">
             <FluentGridItem xs="12" Justify="JustifyContent.Center">
-                <FluentButton @onclick="Transform" BackgroundColor="var(--warning)" Color="black" Style="width: 100%;">Transform</FluentButton>
+                <FluentButton @onclick="Transform" BackgroundColor="whitesmoke" Color="black" Style="width: 30%;">Transform</FluentButton>
             </FluentGridItem>
         </FluentGrid>
         <FluentGrid Spacing="3" Justify="JustifyContent.Center">
@@ -82,12 +82,12 @@
                 <FluentButton @onclick="Transform" Appearance="Appearance.Accent" Style="width: 100%;">Transform</FluentButton>
             </FluentGridItem>
             <FluentGridItem xs="4">
-                <FluentButton @onclick="Transform" Appearance="Appearance.Accent" Style="width: 100%;">Transform</FluentButton>
+                <FluentButton @onclick="Clear" BackgroundColor="salmon" Color="black" Style="width: 100%;">Clear</FluentButton>
             </FluentGridItem>
         </FluentGrid>
         <FluentGrid Spacing="3" Justify="JustifyContent.Center">
             <FluentGridItem xs="12" Justify="JustifyContent.Center">
-                <FluentButton @onclick="JavaScript" BackgroundColor="limeGreen" Color="black" Style="width: 100%;">JavaScript</FluentButton>
+                <FluentButton @onclick="JavaScript" BackgroundColor="palegreen" Color="black" Style="width: 30%;">JavaScript</FluentButton>
             </FluentGridItem>
         </FluentGrid>
         <FluentGrid Spacing="3" Justify="JustifyContent.Center">
