--- a/FluentTransformer/Components/App.razor
+++ b/FluentTransformer/Components/App.razor
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="FluentTransformer.styles.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
-    <loading-theme storage-name="theme"></loading-theme>
+    <loading-theme mode="dark" />
     <HeadOutlet />
 </head>
 
