--- a/FluentTransformer/Components/Layout/NavMenu.razor
+++ b/FluentTransformer/Components/Layout/NavMenu.razor
@@ -6,7 +6,7 @@
     <nav class="sitenav" aria-labelledby="main-menu" onclick="document.getElementById('navmenu-toggle').click();">
         <FluentNavMenu Id="main-menu" Collapsible="true" Width="250" Title="Navigation menu" @bind-Expanded="expanded">
             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.CodeCircle())" IconColor="Color.Accent">Transformer</FluentNavLink>
-            @* <FluentNavLink Href="theme" Icon="@(new Icons.Regular.Size20.CodeTextEdit())" IconColor="Color.Accent">Theme</FluentNavLink> *@
+            @* <FluentNavLink Href="theme" Icon="@(new Icons.Regular.Size20.Color())" IconColor="Color.Accent">Theme</FluentNavLink> *@
             @* <FluentNavLink Href="weather" Icon="@(new Icons.Regular.Size20.WeatherPartlyCloudyDay())" IconColor="Color.Accent">Weather</FluentNavLink> *@
         </FluentNavMenu>
     </nav>
