Update UI and functionality of Transformer.razor
Updated `MainLayout.razor` to include a new link in the footer and renamed a class. Major updates were made to `Transformer.razor` including the addition of a FluentSelect component, navigation buttons, and layout adjustments. `Transformer.razor.cs` was updated with new methods for saving and navigating code snippets, improved error handling, and reading code snippets from a JSON file. `FluentTransformer.csproj` was updated with a new ProjectExtensions tag. `app.css` was updated to change the grid-column property and rename a class. Added a new `JsSnippets.json` file with JavaScript code snippets.

--- a/FluentTransformer/Components/Layout/MainLayout.razor
+++ b/FluentTransformer/Components/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-<FluentLayout>
+<FluentLayout >
     <FluentHeader>
         FluentTransformer
     </FluentHeader>
@@ -14,8 +14,10 @@
     <FluentFooter>
         <div class="link1">
             <a href="https://www.fluentui-blazor.net" target="_blank">FluentUi Documentation and demos</a>
+            <br />
+            <a href="https://github.com/MBishop84/FluentTransformer.git" target="_blank">This GitHub Repository</a>
         </div>
-        <div class="link2">
+        <div class="link3">
             <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
         </div>
     </FluentFooter>
