--- a/FluentTransformer/Components/_Imports.razor
+++ b/FluentTransformer/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using FluentTransformer
 @using FluentTransformer.Components
+@using BlazorMonaco
+@using BlazorMonaco.Editor
+@using BlazorMonaco.Languages
